--- a/src/PopForums.Mvc/wwwroot/PopForums.css
+++ b/src/PopForums.Mvc/wwwroot/PopForums.css
@@ -1,83 +1,97 @@
-﻿@import url('https://use.typekit.net/vux2csy.css');
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap');
+﻿@import url("https://use.typekit.net/vux2csy.css");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&display=swap");
 
 :root {
-	--bs-primary-rgb: 0, 48, 135;
-	--bs-link-color: #003087;
+    --bs-primary-rgb: 0, 48, 135;
+    --bs-link-color: #003087
+    --bs-warning: #D41543;
+    --bs-warning-rgb: 212, 21, 67;
+    --bs-link-hover-color: #003087;
+}
+
+.bg-warning *{
+    color: #fff !important;
 }
 
 #ForumContainer h1 .icon {
-	font-size: .8em;
+    font-size: 0.8em;
 }
 
 #ForumContainer .navbar {
-	z-index: 1025;
+    z-index: 1025;
 }
 
 #ForumContainer .newIndicator {
-	max-width: 40px;
+    max-width: 40px;
 }
 
-#ForumContainer #PostResponseMessage, #ForumContainer #TopicModerationLog {
-	display: none;
+#ForumContainer #PostResponseMessage,
+#ForumContainer #TopicModerationLog {
+    display: none;
 }
 
 #ForumContainer #NotificationList .card-footer {
-    font-size: .8em;
+    font-size: 0.8em;
 }
 
 #ForumContainer .toLabelX {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 #ForumContainer #ToModal #ToResultList {
-	height: 200px;
-	overflow-y: scroll;
-	margin-top: 10px;
+    height: 200px;
+    overflow-y: scroll;
+    margin-top: 10px;
 }
 
 #ForumContainer #PMToBox div {
-	margin-right: 5px;
+    margin-right: 5px;
 }
 
 #ForumContainer .answerData {
-	min-width: 4em;
+    min-width: 4em;
 }
 
-#ForumContainer .answerButton, 
+#ForumContainer .answerButton,
 pf-notificationtoggle,
 #ForumContainer .postUserData h3 {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 #ForumContainer .QAstate {
-	width: 3em;
+    width: 3em;
 }
 
 #ForumContainer .newPostBlock {
-	border-left: solid 8px;
-	border-color: var(--bs-secondary);
-	padding-left: 10px;
+    border-left: solid 8px;
+    border-color: var(--bs-secondary);
+    padding-left: 10px;
 }
 
 /* post item */
 
 #ForumContainer blockquote {
-	font-size: 100%;
-	border-left: 8px solid var(--bs-secondary);
-	padding: 0 1em;
+    font-size: 100%;
+    border-left: 8px solid var(--bs-secondary);
+    padding: 0 1em;
 }
 #ForumContainer .miniProfileBox {
-	height: 0;
-	overflow: hidden;
-	transition: all .5s ease-in-out;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
 }
 .voters {
     max-height: 10em;
     overflow: auto;
 }
-.voters ul { padding: 0; margin: 0; }
-.voters li { list-style: none;font-size: 100%; }
+.voters ul {
+    padding: 0;
+    margin: 0;
+}
+.voters li {
+    list-style: none;
+    font-size: 100%;
+}
 pf-votecount span {
     font-size: 1.2em;
     margin-right: 1em;
@@ -90,142 +104,148 @@ pf-votecount span {
 #ForumContainer .postToolContainer .toolButton {
     width: 2em;
     text-align: center;
-	font-size: 1.3em;
+    font-size: 1.3em;
     margin: auto 0;
 }
-#ForumContainer .postToolContainer a, #ForumContainer .postToolContainer button {
-	color: var(--bs-body-color);
+#ForumContainer .postToolContainer a,
+#ForumContainer .postToolContainer button {
+    color: var(--bs-body-color);
 }
-#ForumContainer .postToolContainer *, #ForumContainer h2 a {
-	text-decoration: none;
+#ForumContainer .postToolContainer *,
+#ForumContainer h2 a {
+    text-decoration: none;
     cursor: pointer;
 }
 #ForumContainer .postItem .postImage {
-	max-width: 100%;height: auto;
+    max-width: 100%;
+    height: auto;
 }
 #ForumContainer .postItem iframe {
-	max-width: 100%;
+    max-width: 100%;
 }
 #ForumContainer .postTime {
-	display: block;
+    display: block;
 }
 
 /* text editor */
 
 #ForumContainer #FullText {
-	height: 300px;
+    height: 300px;
 }
 #tinymce {
-	padding: 10px !important;
+    padding: 10px !important;
 }
 #ForumContainer .postForm {
-	margin: 10px 0;
+    margin: 10px 0;
 }
 
 #ForumContainer #ParsedFullText {
-	overflow-y: scroll;overflow-x: hidden;
-	max-height: 350px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 350px;
 }
 
 #ForumContainer .voteCount .voters {
-	display: none;
+    display: none;
 }
 
 #ForumContainer .morePostsButton {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
-#ForumContainer .morePager:hover, #ForumContainer .currentPager:hover {
-	background: none;
+#ForumContainer .morePager:hover,
+#ForumContainer .currentPager:hover {
+    background: none;
 }
-#ForumContainer .morePager, #ForumContainer .currentPager .page-link {
-	cursor: default;
-	white-space: nowrap;
+#ForumContainer .morePager,
+#ForumContainer .currentPager .page-link {
+    cursor: default;
+    white-space: nowrap;
 }
 
 #ForumContainer .modal-body img {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 /* queries */
 
-@media(min-width:1px) {
-	#ForumContainer #PreviewModal .modal-dialog {
-		width: 90%!important;
-		max-height: 95% !important;
-		margin: 10px auto;
-	}
+@media (min-width: 1px) {
+    #ForumContainer #PreviewModal .modal-dialog {
+        width: 90% !important;
+        max-height: 95% !important;
+        margin: 10px auto;
+    }
 }
 
 /* Bootstrap overrides */
 
 #ForumContainer .navbar .badge {
-	background-color: var(--bs-danger);
-	color: var(--bs-white);
-	position: relative;
-	top: -2px;
+    background-color: var(--bs-danger);
+    color: var(--bs-white);
+    position: relative;
+    top: -2px;
 }
 
 #ForumContainer .hidden {
-	display: none !important;
+    display: none !important;
 }
 
 #ForumContainer .breadcrumb {
-	padding: .75em;
-	background-color: var(--bs-light);
+    padding: 0.75em;
+    background-color: var(--bs-light);
 }
 #ForumContainer .breadcrumb a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 .btn-link {
-	border: none;
-	cursor: pointer;
-	background: none;
+    border: none;
+    cursor: pointer;
+    background: none;
 }
 
 /* icons */
 
 .miniProfile a.icon {
-	text-decoration: none !important;
-	margin-right: .5em;
+    text-decoration: none !important;
+    margin-right: 0.5em;
 }
 
-
 :root {
-	--bs-light-rgb: 250, 250, 250;
-	--bs-light: #fafafa;
+    --bs-light-rgb: 250, 250, 250;
+    --bs-light: #fafafa;
 }
 .alert-light {
     --bs-alert-bg: #f0f0f0;
 }
 
-#AccountBox .icon, #SearchDropDown .icon {
-	font-size: 1.3em;
-	vertical-align: text-top;
+#AccountBox .icon,
+#SearchDropDown .icon {
+    font-size: 1.3em;
+    vertical-align: text-top;
     margin-left: 0.2em;
 }
 
 @font-face {
-	font-family: 'icomoon';
-	src: url('Fonts/icomoon.ttf?rv0tpv') format('truetype'), url('Fonts/icomoon.woff?rv0tpv') format('woff'), url('Fonts/icomoon.svg?rv0tpv#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;
+    font-family: "icomoon";
+    src: url("Fonts/icomoon.ttf?rv0tpv") format("truetype"), url("Fonts/icomoon.woff?rv0tpv") format("woff"), url("Fonts/icomoon.svg?rv0tpv#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
 .icon {
-	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: 'icomoon' !important;
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: "icomoon" !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-recycle:before {
@@ -233,382 +253,428 @@ pf-votecount span {
 }
 
 .icon-trophy:before {
-	content: "\e900";
+    content: "\e900";
 }
 
 .icon-trophy-fill:before {
-	content: "\e901";
+    content: "\e901";
 }
 
 .icon-bell-fill:before {
-	content: "\e902";
+    content: "\e902";
+    color: #003087;
 }
 
 .icon-bell:before {
-	content: "\e903";
+    content: "\e903";
 }
 
 .icon-bell-slash:before {
-	content: "\e904";
+    content: "\e904";
 }
 
 .icon-card-list:before {
-	content: "\e905";
+    content: "\e905";
 }
 
 .icon-twitter:before {
-	content: "\e906";
+    content: "\e906";
 }
 
 .icon-quote:before {
-	content: "\e907";
+    content: "\e907";
 }
 
 .icon-link:before {
-	content: "\e908";
+    content: "\e908";
 }
 
 .icon-arrow-counterclockwise:before {
-	content: "\e909";
+    content: "\e909";
 }
 
 .icon-arrow-down-circle:before {
-	content: "\e90a";
+    content: "\e90a";
 }
 
 .icon-arrow-left-circle:before {
-	content: "\e90b";
+    content: "\e90b";
 }
 
 .icon-arrow-right-circle:before {
-	content: "\e90c";
+    content: "\e90c";
 }
 
 .icon-arrow-up-circle:before {
-	content: "\e90d";
+    content: "\e90d";
 }
 
 .icon-box-arrow-up-right:before {
-	content: "\e90e";
+    content: "\e90e";
 }
 
 .icon-chat:before {
-	content: "\e90f";
+    content: "\e90f";
 }
 
 .icon-chat-dots:before {
-	content: "\e910";
+    content: "\e910";
 }
 
 .icon-check-circle:before {
-	content: "\e911";
+    content: "\e911";
 }
 
 .icon-check-circle-fill:before {
-	content: "\e912";
+    content: "\e912";
 }
 
 .icon-clock-history:before {
-	content: "\e913";
+    content: "\e913";
 }
 
 .icon-cloud-arrow-up:before {
-	content: "\e914";
+    content: "\e914";
 }
 
 .icon-cloud-arrow-up-fill:before {
-	content: "\e915";
+    content: "\e915";
 }
 
 .icon-dash-circle:before {
-	content: "\e916";
+    content: "\e916";
 }
 
 .icon-envelope:before {
-	content: "\e917";
+    content: "\e917";
 }
 
 .icon-exclamation-circle-fill:before {
-	content: "\e918";
+    content: "\e918";
 }
 
 .icon-exclamation-octagon-fill:before {
-	content: "\e919";
+    content: "\e919";
 }
 
 .icon-eye:before {
-	content: "\e91a";
+    content: "\e91a";
 }
 
 .icon-eye-fill:before {
-	content: "\e91b";
+    content: "\e91b";
 }
 
 .icon-facebook:before {
-	content: "\e91c";
+    content: "\e91c";
 }
 
 .icon-file-earmark-text:before {
-	content: "\e91d";
+    content: "\e91d";
 }
 
 .icon-file-earmark-text-fill:before {
-	content: "\e91e";
+    content: "\e91e";
+    color: #003087;
 }
 
 .icon-file-text:before {
-	content: "\e91f";
+    content: "\e91f";
 }
 
 .icon-file-text-fill:before {
-	content: "\e920";
+    content: "\e920";
 }
 
 .icon-gear-fill:before {
-	content: "\e921";
+    content: "\e921";
 }
 
 .icon-google:before {
-	content: "\e922";
+    content: "\e922";
 }
 
 .icon-hand-thumbs-down:before {
-	content: "\e923";
+    content: "\e923";
 }
 
 .icon-hand-thumbs-down-fill:before {
-	content: "\e924";
+    content: "\e924";
 }
 
 .icon-hand-thumbs-up:before {
-	content: "\e925";
+    content: "\e925";
 }
 
 .icon-hand-thumbs-up-fill:before {
-	content: "\e926";
+    content: "\e926";
 }
 
 .icon-heart:before {
-	content: "\e927";
+    content: "\e927";
 }
 
 .icon-heart-fill:before {
-	content: "\e928";
+    content: "\e928";
 }
 
 .icon-house-door:before {
-	content: "\e929";
+    content: "\e929";
 }
 
 .icon-image:before {
-	content: "\e92a";
+    content: "\e92a";
 }
 
 .icon-images:before {
-	content: "\e92b";
+    content: "\e92b";
 }
 
 .icon-info-circle:before {
-	content: "\e92c";
+    content: "\e92c";
 }
 
 .icon-info-circle-fill:before {
-	content: "\e92d";
+    content: "\e92d";
 }
 
 .icon-instagram:before {
-	content: "\e92e";
+    content: "\e92e";
 }
 
 .icon-lock:before {
-	content: "\e92f";
+    content: "\e92f";
 }
 
 .icon-lock-fill:before {
-	content: "\e930";
+    content: "\e930";
 }
 
 .icon-microsoft:before {
-	content: "\e931";
+    content: "\e931";
 }
 
 .icon-paperclip:before {
-	content: "\e932";
+    content: "\e932";
 }
 
 .icon-pencil-square:before {
-	content: "\e933";
+    content: "\e933";
 }
 
 .icon-people:before {
-	content: "\e934";
+    content: "\e934";
 }
 
 .icon-people-fill:before {
-	content: "\e935";
+    content: "\e935";
 }
 
 .icon-person:before {
-	content: "\e936";
+    content: "\e936";
 }
 
 .icon-person-fill:before {
-	content: "\e937";
+    content: "\e937";
 }
 
 .icon-pin-angle:before {
-	content: "\e938";
+    content: "\e938";
 }
 
 .icon-pin-angle-fill:before {
-	content: "\e939";
+    content: "\e939";
 }
 
 .icon-plus-square:before {
-	content: "\e93a";
+    content: "\e93a";
 }
 
 .icon-plus-square-fill:before {
-	content: "\e93b";
+    content: "\e93b";
 }
 
 .icon-question-circle:before {
-	content: "\e93c";
+    content: "\e93c";
 }
 
 .icon-question-circle-fill:before {
-	content: "\e93d";
+    content: "\e93d";
 }
 
 .icon-reply:before {
-	content: "\e93e";
+    content: "\e93e";
 }
 
 .icon-reply-fill:before {
-	content: "\e93f";
+    content: "\e93f";
 }
 
 .icon-rss-fill:before {
-	content: "\e940";
+    content: "\e940";
 }
 
 .icon-search:before {
-	content: "\e941";
+    content: "\e941";
 }
 
 .icon-share-fill:before {
-	content: "\e942";
+    content: "\e942";
 }
 
 .icon-skip-backward-fill:before {
-	content: "\e943";
+    content: "\e943";
 }
 
 .icon-skip-end-fill:before {
-	content: "\e944";
+    content: "\e944";
 }
 
 .icon-skip-forward-fill:before {
-	content: "\e945";
+    content: "\e945";
 }
 
 .icon-skip-start-fill:before {
-	content: "\e946";
+    content: "\e946";
 }
 
 .icon-star:before {
-	content: "\e947";
+    content: "\e947";
 }
 
 .icon-star-fill:before {
-	content: "\e948";
+    content: "\e948";
+    color: #003087;
 }
 
 .icon-trash3-fill:before {
-	content: "\e949";
+    content: "\e949";
 }
 
 .icon-unlock-fill:before {
-	content: "\e94a";
+    content: "\e94a";
 }
 
 .icon-youtube:before {
-	content: "\e94b";
+    content: "\e94b";
 }
-
-
-
-
-
-
-
-
-
-
 
 #ForumContainer .newIndicator a {
-	text-decoration: none;
+    text-decoration: none;
 }
 #ForumContainer .topicIndicator {
-	font-size: 2em;
-	width: 40px;
+    font-size: 2em;
+    width: 40px;
 }
 
 #ForumContainer .topicIndicator .topicIndicatorBadge {
-	position: relative;
-	font-size: 60%;
-	text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
+    position: relative;
+    font-size: 60%;
+    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
 }
 #ForumContainer .topicIndicator .soloLeftBadge {
-	left: -95%;
+    left: -95%;
 }
 #ForumContainer .topicIndicator .firstBadge {
-	left: -25%;
+    left: -25%;
 }
 #ForumContainer .topicIndicator .secondBadge {
-	left: -145%;
+    left: -145%;
 }
 
 #ForumContainer #Profile div.row div {
-	padding:.5em;
+    padding: 0.5em;
 }
 
 /* Custom styles */
 
+/* Home */
+
 .dropdown-menu {
-	--bs-dropdown-border-color: #003087 !important;
-	--bs-dropdown-divider-bg: #003087 !important;
+    --bs-dropdown-border-color: #003087 !important;
+    --bs-dropdown-divider-bg: #003087 !important;
 }
 
-.btn-primary {
-	--bs-btn-hover-bg: rgba(0, 48, 135, .85);
-	--bs-btn-hover-border-color: rgba(0, 48, 135, .85);
+.btn-primary,
+.btn-warning {
+    --bs-btn-hover-bg: rgba(0, 48, 135, 0.85);
+    --bs-btn-hover-border-color: rgba(0, 48, 135, 0.85);
+    --bs-btn-active-bg: #003087;
+    --bs-btn-active-border-color: #003087;
 }
 
-body {
-	font-family: 'neue-haas-grotesk-display';
-	height: 100%;
-	-webkit-tap-highlight-color: transparent;
+.btn-warning:hover {
+    color: #fff !important;
 }
 
 .btn {
-	background-color: #003087;
-	padding: 0.85rem 1.25rem 0.75rem;
-	color: #fff;
-	border-radius: 0.4rem;
-	border-color: #003087;
+    border-radius: 0 !important;
+}
+
+body {
+    font-family: "neue-haas-grotesk-display";
+    height: 100%;
+    -webkit-tap-highlight-color: transparent;
+}
+
+body:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-image: url("assets/pattern-browseby.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    /* pattern */
+}
+
+.btn {
+    background-color: #003087;
+    padding: 0.85rem 1.25rem 0.75rem;
+    color: #fff;
+    border-radius: 0.4rem;
+    border-color: #003087;
 }
 
 .navbar-brand {
-	width: 145px;
+    width: 145px;
 }
 
-.navbar-brand svg{
-	width: 100%;
+.navbar-brand svg {
+    width: 100%;
+}
+
+.forum-title {
+    display: none;
+}
+
+.users-online {
+    background-color: #003087;
+    padding: 1.6rem;
+}
+
+.users-online h3,
+.users-online a,
+.users-online p {
+    color: #fff;
+}
+
+.users-online p:last-child {
+    margin-bottom: 0;
+}
+
+#ForumFooter {
+    background-color: #fafafa;
+    margin-top: 0 !important;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 @media only screen and (min-width: 992px) {
-	.navbar-brand {
-		width: 254px;
-	}
+    .navbar-brand {
+        width: 254px;
+    }
 }
