--- a/src/PopForums.Mvc/Areas/Forums/Views/Admin/App.cshtml
+++ b/src/PopForums.Mvc/Areas/Forums/Views/Admin/App.cshtml
@@ -13,6 +13,7 @@
 	<script src="~/PopForums/lib/axios/dist/axios.min.js" asp-append-version="true"></script>
 	<script src="~/PopForums/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <link href="~/PopForums/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/PopForums/PopForums.css" rel="stylesheet" asp-append-version="true" />
 	<style>
 		.fade-enter-active, .fade-leave-active {
 			transition: opacity .5s;
